[gd_scene load_steps=7 format=3 uid="uid://bdiwkysrjdawf"]

[ext_resource type="Script" path="res://Player/Fatuo.gd" id="1_f28jl"]
[ext_resource type="Texture2D" uid="uid://d1fn38lav1pup" path="res://Assets/Sprite Pack 5/9 - Wispy Fire/Weak_Flicker_(32 x 32).png" id="2_52yg3"]
[ext_resource type="PackedScene" uid="uid://b6woj2ugj5t6b" path="res://Player/bullet.tscn" id="2_fdc0p"]

[sub_resource type="Animation" id="Animation_71nrp"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_fatuo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_w8l4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_fatuo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_14k0q"]
_data = {
"Idle": SubResource("Animation_71nrp"),
"RESET": SubResource("Animation_w8l4q")
}

[node name="Fatuo" type="Node2D"]
script = ExtResource("1_f28jl")
speed = 20
offset = Vector2(-20, -30)
bullet_scene = ExtResource("2_fdc0p")

[node name="spr_fatuo" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_52yg3")
hframes = 5

[node name="anim_fatuo" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_14k0q")
}

[node name="shoot_timer" type="Timer" parent="."]

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
